# INDIAN-STOCK-ANALYSIS

./: .replit  README.md  dashboard_components.py  main.py  pyproject.toml  requirement.txt  utils.py
.streamlit/: config.toml
